# DeckDown

./: .gitignore  README.md  pyproject.toml
examples/: demo.md  minimal.md  showcase.md
src/deckdown/: __init__.py  app.py  cli.py  code_exec.py  config.py  parser.py  renderer.py  themes.py
